# wright

./: .gitignore  README.md  package.json
app/: .gitignore  README.md  globals.css  package.json  page.tsx  tsconfig.json
app/app/: README.md  package.json  tsconfig.json
app/auth/google/callback/: page.tsx
app/cross/: package.json
app/cross/src/: App.css
app/cross/src-tauri/: Cargo.toml  tauri.conf.json
app/cross/src-tauri/src/: main.rs
app/editor/: README.md  index.ts  package.json  styles.css  tailwind.config.ts  tsconfig.json
app/editor/components/: app.tsx  bubble-menu.tsx  web.tsx
app/editor/components/utils/: index.ts
app/editor/extensions/: index.ts
app/lib/: index.ts  package.json  tsconfig.json
app/lib/document/: document.ts  ids.ts
app/lib/general/: constants.ts  index.ts
app/lib/hooks/: index.ts  useRender.ts  useServer.ts
app/lib/markup/: typst.ts
app/native/: .gitignore  App.tsx  app.json  package.json
app/web/: .gitignore  next.config.ts  package.json  tsconfig.json
app/web/app/: layout.tsx  page.tsx
app/web/app/doc/: page.tsx
app/web/app/playground/: page.tsx
app/web/app/sign-in/[[...sign-in]]/: page.tsx
app/web/app/waitlist/: page.tsx
app/web/components/: header.tsx
app/web/components/auth/: auth-redirect.tsx  auth-wrappers.tsx
app/web/components/document/: document-editor.tsx  document-styles.css
app/web/components/providers/: convex-client.tsx  convex-server.tsx  themes.tsx
components/: DocumentCard.tsx  DocumentFilters.tsx  DocumentGrid.tsx  GoogleAuthButton.tsx
convex/: documents.ts  google.ts  schema.ts
convex/_generated/: api.d.ts
engine/bindings/: .gitignore  Cargo.toml  README.md  __init__.py  pyproject.toml
engine/bindings/patches/typst-svg-0.13.1/src/: lib.rs
engine/bindings/python/bindings/: __init__.py
engine/bindings/src/: lib.rs
engine/core/: Cargo.toml  output.html
engine/core/patches/typst-html-0.13.1/src/: lib.rs
engine/core/patches/typst-svg-0.13.1/src/: image.rs  lib.rs  paint.rs  shape.rs  text.rs
engine/core/src/: compile.rs  html.rs  lib.rs  markup.rs
engine/wasm/: Cargo.toml  README.md
engine/wasm/src/: lib.rs
lib/: utils.ts
platform/: .gitignore  main.py  pyproject.toml
platform/bindings/: .gitignore  Cargo.toml  __init__.py
platform/bindings/src/: compile.rs  lib.rs
platform/extensions/: __init__.py  __init__.pyi
platform/lib/: example.py  markup.py
platform/routers/: document.py
