[package]
name = "wright-bindings"
version = "0.1.0"
edition = "2024"

[lib]
name = "bindings"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module", "abi3-py310"] }
pyo3-stub-gen = "0.13.1"

wright_core = { path = "../core", package = "wright-core" }
typst = "0.13.1"
typst-svg = "0.13.1"
typst-library = "0.13.1"

[patch.crates-io]
typst-svg = { path = "../core/patches/typst-svg-0.13.1" }

[package.metadata.maturin]
name = "bindings"
