[package]
name = "wright-extensions"
version = "0.1.0"
edition = "2024"

[lib]
name = "extensions"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module", "abi3-py310"] }

typst = "0.13.1"
typst-svg = "0.13.1"
comemo = "0.4"

zune-inflate = { version = "0.2", default-features = false, features = [
  "gzip",
  "std",
] }
tar = "0.4"
ureq = "2.9"

time = "0.3"
ttf-parser = "0.25"
typst-kit = { version = "0.13", features = ["embed-fonts"] }
typst-as-lib = "0.14.4"

[package.metadata.maturin]
name = "extensions"
